rearrange posts folder

--- a/posts/start-your-new-react-project/index.mdx
+++ b/posts/start-your-new-react-project/index.mdx
@@ -3,6 +3,7 @@ title: Start your new react project.
 date: 2020-03-13
 description: A setup with Typescript, Eslint and Prettier.
 published: true
+slug: start-your-new-react-project
 ---
 
 ### **Start your new react project.**
