--- a/posts/start-your-new-react-project/index.mdx
+++ b/posts/start-your-new-react-project/index.mdx
@@ -5,10 +5,6 @@ description: A setup with Typescript, Eslint and Prettier.
 published: true
 ---
 
-### **Start your new react project.**
-
-###### A setup with Typescript, Eslint and Prettier.
-
 In almost every new project I start with React I always ask myself if I should use `create-react-app`. To small apps this is a pretty good option but if you want to configure your app a little more and maybe change the babel and webpack configuration, you should start a project from scratch.
 
 Let's create a new directory and initialize a default npm app.
@@ -23,7 +19,7 @@ npm init -y
 
 Now our application has a  `package.json`  file. 
 
-1. ##### Let's start with webpack and babel setup.
+## Let's start with webpack and babel setup.
 
    ```bash
    # Install webpack 
@@ -38,7 +34,7 @@ Now our application has a  `package.json`  file.
    npm i --save-dev @babel/core babel-loader @babel/preset-env @babel/preset-react @babel/preset-typescript
    ```
 
-    A babel preset it's a tool to add support for a certain language.
+  A babel preset it's a tool to add support for a certain language.
 
    **@babel/preset-env, @babel/preset-react and @babel/preset-typescript :** Allow us to add support for the latest features of javascript, react and typescript.
 
@@ -133,7 +129,7 @@ Now our application has a  `package.json`  file.
    
    ```
 
-2. ##### Typescript and react.
+## Typescript and react.
 
    Typescript is a programming language developed by Microsoft. It's a superset of javascript, which means it has some additional features, like static typing  and support for object oriented programming options. Today is one of the most popular languages.
 
@@ -189,7 +185,7 @@ Now our application has a  `package.json`  file.
    }
    ```
 
-3. ##### Better development experience with Eslint and Prettier.
+## Better development experience with Eslint and Prettier.
 
    Eslint is a linting tool for javascript. It analyzes our code, looking for syntax errors, saving us a lot of development time.
 
