add two new posts

--- a/posts/start-your-new-react-project/index.mdx
+++ b/posts/start-your-new-react-project/index.mdx
@@ -1,11 +1,11 @@
 ---
-title: Start your new react project.
+title: A new React project with Typescript, Eslint, and Prettier.
 date: 2020-03-13
-description: A setup with Typescript, Eslint and Prettier.
+description: Start your project from scratch.
 published: true
 ---
 
-In almost every new project I start with React I always ask myself if I should use `create-react-app`. To small apps this is a pretty good option but if you want to configure your app a little more and maybe change the babel and webpack configuration, you should start a project from scratch.
+In almost every new project I start with React I always ask myself if I should use `create-react-app`. To small apps, this is a pretty good option but if you want to configure your app a little more and maybe change the babel and webpack configuration, you should start a project from scratch.
 
 Let's create a new directory and initialize a default npm app.
 
@@ -34,7 +34,7 @@ Now our application has a  `package.json`  file.
    npm i --save-dev @babel/core babel-loader @babel/preset-env @babel/preset-react @babel/preset-typescript
    ```
 
-  A babel preset it's a tool to add support for a certain language.
+    A babel preset it's a tool to add support for a certain language.
 
    **@babel/preset-env, @babel/preset-react and @babel/preset-typescript :** Allow us to add support for the latest features of javascript, react and typescript.
 
@@ -141,7 +141,7 @@ Now our application has a  `package.json`  file.
    npm install react react-dom @types/react @types/react-dom
    ```
 
-   **@types/react y @types/react-dom:** These packages add the types to react and react-dom.
+   **@types/react y @types/react-dom:** These packages add the types for react and react-dom.
 
    Let's create a `src` folder on the root, and inside an `app.tsx` file.
 
