--- a/posts/context-use-reducer-typescript/index.mdx
+++ b/posts/context-use-reducer-typescript/index.mdx
@@ -5,17 +5,17 @@ description: Context API with action and reducers strongly typed.
 published: true
 ---
 
-[Just the code?](https://codesandbox.io/s/context-reducer-ts-9ctis).
+[Just the code?](https://codesandbox.io/s/context-reducer-ts-9ctis)
 
-There are some many options to handle state in react applications. Obviously you can use `setState` for some small logic, but what if you have a complex state to manage?
+There are many options to handle state in react applications. Obviously you can use `setState` for some small logic, but what if you have a complex state to manage?
 
 Maybe you will use Redux or MobX to handle this scenario, but there is also the option to use React Context, and you don't have to install another dependency.
 
-Let's see how we can manage a complex state, with the Context API and Typescript.
+Let's see how we can manage a complex state, with the Context API and Typescript. 
 
-<!--In this tutorial we are building, a product list with a shopping cart counter. -->
+> In this tutorial we are building, a product list with a shopping cart counter.
 
-First create a new React project with `create-react-app`.
+First, create a new React project with `create-react-app`.
 
 ```bash
 npx create-react-app my-app --template typescript
@@ -24,15 +24,15 @@ cd my-app/
 
 Next, create a new `context.tsx` file inside the `src` directory.
 
-```tsx
+```javascript
 /*context.tsx*/
 
-import React, { createContext } from 'react'
+import React, { createContext } from 'react';
 
-const AppContext = createContext({})
+const AppContext = createContext({});
 ```
 
-You can initialize a context api as simple as that, with any value you want, in this case I'm using and empty object.
+You can initialize a context api as simple as that, with any value you want, in this case, I'm using an empty object.
 
 Now let's create an initial state, with an empty list of products and the shopping cart counter to zero. Also, let's add some types for this.
 
@@ -60,7 +60,7 @@ const initialState = {
 const AppContext = createContext<InitialStateType>(initialState);
 ```
 
-Every product inside the product list is going to have an id, name and a price.
+Every product inside the product list is going to have an id, name, and price.
 
 Now we will use reducers and actions to create and delete a product, and also increase the shopping cart counter by one. First, create a new file called `reducers.ts`.
 
@@ -76,19 +76,21 @@ export const productReducer = (state, action) => {
           id: action.payload.id,
           name: action.payload.name,
           price: action.payload.price,
-        },
+        }
       ]
     case 'DELETE_PRODUCT':
-      return [...state.filter(product => product.id !== action.payload.id)]
+      return [
+        ...state.filter(product => product.id !== action.payload.id),
+      ]
     default:
-      return state
+      return state;
   }
 }
 
 export const shoppingCartReducer = (state, action) => {
   switch (action.type) {
     case 'ADD_PRODUCT':
-      return state + 1
+      return state + 1;
   }
 }
 ```
@@ -151,11 +153,11 @@ export { AppContext, AppProvider };
 
 There's is a `mainReducer` function, that combines the two reducers that we are going to have (product reducer and shopping cart reducer), each one manages a select part of the state.
 
-Also, we create the `AppProvider` component, and inside this, the `useReducer` hook take this `mainReducer` and the initial state to return the `state` and the `dispatch`.
+Also, we create the `AppProvider` component, and inside this, the `useReducer` hook takes this `mainReducer` and the initial state to return the `state` and the `dispatch`.
 
 We pass these values into the `AppContext.Provider`, doing this we can access the `state` and `dispatch` with the `useContext` hook.
 
-Next, add these types for the reducers and actions.
+Next, add these types for the reducers and actions. 
 
 ```typescript
 /*reducers.ts*/
@@ -163,13 +165,13 @@ Next, add these types for the reducers and actions.
 type ActionMap<M extends { [index: string]: any }> = {
   [Key in keyof M]: M[Key] extends undefined
     ? {
-        type: Key
+        type: Key;
       }
     : {
-        type: Key
-        payload: M[Key]
+        type: Key;
+        payload: M[Key];
       }
-}
+};
 
 export enum Types {
   Create = 'CREATE_PRODUCT',
@@ -180,25 +182,24 @@ export enum Types {
 // Product
 
 type ProductType = {
-  id: number
-  name: string
-  price: number
+  id: number;
+  name: string;
+  price: number;
 }
 
 type ProductPayload = {
-  [Types.Create]: {
-    id: number
-    name: string
-    price: number
-  }
+  [Types.Create] : {
+    id: number;
+    name: string;
+    price: number;
+  };
   [Types.Delete]: {
-    id: number
+    id: number;
   }
 }
 
-export type ProductActions = ActionMap<ProductPayload>[keyof ActionMap<
-  ProductPayload
->]
+export type ProductActions =
+  ActionMap<ProductPayload>[keyof ActionMap<ProductPayload>];
 
 export const productReducer = (
   state: ProductType[],
@@ -212,24 +213,25 @@ export const productReducer = (
           id: action.payload.id,
           name: action.payload.name,
           price: action.payload.price,
-        },
+        }
       ]
     case Types.Delete:
-      return [...state.filter(product => product.id !== action.payload.id)]
+      return [
+        ...state.filter(product => product.id !== action.payload.id),
+      ]
     default:
-      return state
+      return state;
   }
 }
 
 // ShoppingCart
 
 type ShoppingCartPayload = {
-  [Types.Add]: undefined
+  [Types.Add]: undefined;
 }
 
-export type ShoppingCartActions = ActionMap<
-  ShoppingCartPayload
->[keyof ActionMap<ShoppingCartPayload>]
+export type ShoppingCartActions =
+  ActionMap<ShoppingCartPayload>[keyof ActionMap<ShoppingCartPayload>];
 
 export const shoppingCartReducer = (
   state: number,
@@ -237,35 +239,46 @@ export const shoppingCartReducer = (
 ) => {
   switch (action.type) {
     case Types.Add:
-      return state + 1
+      return state + 1;
     default:
-      return state
+      return state;
   }
 }
 ```
 
-I take this approach from this [post](https://medium.com/hackernoon/finally-the-typescript-redux-hooks-events-blog-you-were-looking-for-c4663d823b01), basically, we are checking wich `action.type` is used, and according to that, we generate the types for the payload.
+I take this approach from this [post](https://medium.com/hackernoon/finally-the-typescript-redux-hooks-events-blog-you-were-looking-for-c4663d823b01), basically we are checking wich `action.type` is used, and according to that, we generate the types for the payload. 
+
+---
+
+**NOTE**
 
 Another approach you can take is to use `Discriminated unions` like this.
 
 ```typescript
 type Action =
-  | { type: 'ADD' }
-  | { type: 'CREATE'; create: object }
-  | { type: 'DELETE'; id: string }
+ | { type: 'ADD' }
+ | { type: 'CREATE', create: object }
+ | { type: 'DELETE', id: string };
 ```
 
 In the previous code, all of those types have a common property called type. Typescript will create type guards for discriminated unions and will let us now according to the type we are using wich other properties the object type has.
 
-But for this tutorial, we are using two common properties for our actions `type` and `payload`, and the `payload` object type changes according to the `type`, so discriminated union types won't work.
+But for this tutorial we are using two common properties for our actions `type` and `payload`, and the `payload` object type changes according to the `type`, so discriminated union types won't work.
 
-Now, let's import the types we define into the `context` file.
+---
+
+Now, let's import the types we define into the `context`  file.
 
 ```tsx
 /*context.tsx*/
 
 import React, { createContext, useReducer, Dispatch } from 'react';
-import { productReducer, shoppingCartReducer, ProductActions, ShoppingCartActions } from './reducers';
+import {
+  productReducer,
+  shoppingCartReducer,
+  ProductActions, 
+  ShoppingCartActions 
+} from './reducers';
 
 type ProductType = {
   id: number;
@@ -291,7 +304,10 @@ const AppContext = createContext<{
   dispatch: () => null
 });
 
-const mainReducer = ({ products, shoppingCart }: InitialStateType, action: ProductActions | ShoppingCartActions) => ({
+const mainReducer = (
+  { products, shoppingCart }: InitialStateType,
+  action: ProductActions | ShoppingCartActions
+) => ({
   products: productReducer(products, action),
   shoppingCart: shoppingCartReducer(shoppingCart, action),
 });
@@ -340,7 +356,7 @@ import { Types } from './reducers';
 
 const Products = () => {
   const { state, dispatch } = useContex(AppContext);
-
+  
   return (
     <div>
       <button onClick={() => {
@@ -358,9 +374,11 @@ const Products = () => {
 export default Products;
 ```
 
-Everything now it's strongly typed.
+Everything it's strongly typed now.
 
 You can check the code [here](https://codesandbox.io/s/context-reducer-ts-9ctis).
+
+
 
 #### Sources.
 
