--- a/posts/component-library-storybook-tailwind/index.mdx
+++ b/posts/component-library-storybook-tailwind/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: Start a component library with Storybook, Tailwind, and Typescript.
 date: 2020-04-02
-description: Build components faster for your React project..
+description: Build components faster for your React project.
 published: true
 ---
 
